[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.11.0", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "boms"
version = "1.0.5"
authors = [
  { name="Ocima Kamboj", email="ocimakamboj@gmail.com" },
]
description = "Cell Segmentation for Spatial Transcriptomics Data using BOMS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "mkl",
    "mkl-service",
    "scipy",
    "matplotlib", # for visualisation
    "scikit-learn", # for visualisation
]

[project.optional-dependencies]
test = ["scikit-learn"]

[project.urls]
"Homepage" = "https://github.com/ocimakamboj/boms"

[tool.bumpversion]
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "1.0.5"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [
    "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
filename = "setup.py"