[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.11.0", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "boms"
version = "1.1.0"
authors = [
  { name="Ocima Kamboj", email="ocimakamboj@gmail.com" },
]
description = "Cell Segmentation for Spatial Transcriptomics Data using BOMS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9, <=3.11.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "mkl",
    "mkl-service",
    "scipy",
    "matplotlib", # for visualisation
    "scikit-learn", # for visualisation
]

[project.optional-dependencies]
test = ["scikit-learn"]

[tool.cibuildwheel.macos]
before-all = "brew reinstall libomp"
environment = "LDFLAGS='$(brew --repository)/opt/libomp/lib -lomp'"

[project.urls]
"Homepage" = "https://github.com/ocimakamboj/boms"

[tool.bumpversion]
current_version = "1.1.0"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "setup.py"
# bump-my-version bump patch